fix text align

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -58,6 +58,7 @@
     padding-top: 0;
     text-align: center;
     max-width: 326px;
+    text-align: left;
   }
 }
 .home_accent {
